--- a/AgoraXML/AgoraXML.csproj
+++ b/AgoraXML/AgoraXML.csproj
@@ -61,6 +61,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="sqlserver.cs" />
+    <Compile Include="Standalone.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Standalone.Designer.cs">
+      <DependentUpon>Standalone.cs</DependentUpon>
+    </Compile>
     <Compile Include="xml.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
@@ -77,6 +83,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Standalone.resx">
+      <DependentUpon>Standalone.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
