--- a/AgoraXML/AgoraXML.csproj
+++ b/AgoraXML/AgoraXML.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="alert.cs" />
+    <Compile Include="config.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
